--- a/084display.css
+++ b/084display.css
@@ -16,41 +16,53 @@ div  {
 }
 
 .Tulipsone {
+  width: 150px;
   border: 1em solid green;
   display: inline-block;
   border-radius: 10%;
   display: inline;
   /* display: block; */
   margin: 20px;
+  box-sizing: border-box;
+  /* box-sizing: content-box; */
   padding: 20px;
 }
 
 .Tulipstwo {
+  width: 150px;
   border: 1em dotted green;
   display: inline-block;
   border-radius: 10%;
   display: inline;
   /* display: block; */
   margin: 20px;
+  box-sizing: border-box;
+  /* box-sizing: content-box; */
   padding: 20px;
 }
 
 .Tulipsthree {
+  width: 150px;
   border: 1em dashed green;
   display: inline-block;
   border-radius: 10%;
   display: inline;
   /* display: block; */
   margin: 20px;
+  box-sizing: border-box;
+  /* box-sizing: content-box; */
   padding: 20px;
 }
 
 .Tulipsfour {
+  width: 150px;
   border: 1em groove green;
   display: inline-block;
   border-radius: 10%;
   display: inline;
   /* display: block; */
   margin: 20px;
+  box-sizing: border-box;
+  /* box-sizing: content-box; */
   padding: 20px;
 }
