--- a/tacos.css
+++ b/tacos.css
@@ -14,9 +14,26 @@ nav {
 }
 
 main {
-  width: 75%;
+  width: 50%;
   display: inline-block;
   box-sizing: border-box;
   padding-left: 10px;
   border: 3px solid red;
+}
+
+aside {
+  display: inline-block;
+  vertical-align: top;
+  width:25%;
+  border: 3px double black;
+  box-sizing: border-box;
+  background-color: gold;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
