--- a/flex.css
+++ b/flex.css
@@ -4,23 +4,43 @@
 
 body {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
   border: 5px double green;
-  height: 600px;
-}
-
-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  /* styling */
-  background-color: yellow;
-  border: 2px solid black;
-  height: 100%;
-  width: 100%;
+  height: 1200px;
 }
 
 div {
+  display: inline-block;
+  height: 200px;
+  border: 3px double black;
+  flex-basis: 300px;
+}
+
+.flex1 {
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.flex2 {
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.flex3 {
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+header {
+  /* styling */
+  background-color: yellow;
+  border: 2px solid black;
+  /* height: 100%;
+  width: 100%; */
+}
+
+header > div {
   width: 100px;
   height: 100px;
   border: 2px double black;
