--- a/flex-media/exercises/4/mq-600-900.css
+++ b/flex-media/exercises/4/mq-600-900.css
@@ -1,18 +1,22 @@
 body {
   max-width: 900px;
   margin: 0 auto;
+  box-sizing:border-box;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 header, article, footer {
   width: 100%;
+  box-sizing:border-box;
 }
 
 :nth-child(3) {
-  display: inline-block;
   width: 50%;
+  margin: 0;
 }
 
 :nth-child(4) {
-  display: inline-block;
   width: 50%;
+  margin: 0;
 }
