--- a/float/holy grail/main.css
+++ b/float/holy grail/main.css
@@ -6,8 +6,9 @@ html, body, div {
 }
 
 body {
-  width: 100%;
-  margin: 15px;
+  /* width: 100%;  this set the elements to overlap the right side screen
+  since these are by default block displays setting widths are unnecessary since blocks take the entire width of row automatically. */
+  margin: 5px;
 }
 
 div {
@@ -21,7 +22,7 @@ div {
 
 .c2 {
   background-color: cyan;
-  width: 29%;
+  width: 30%;
   height: 300px;
   margin-bottom: 5px;
   float: left;
@@ -29,16 +30,15 @@ div {
 
 .c3 {
   float:right;
-  width: 69%;
+  width: 69.5%;
   height: 300px;
-  margin-bottom: 210px;
+  margin-bottom: 5px;
   background-color: gray;
 }
 
 .c4 {
-  width: 100%;
   height: 50px;
   background-color: skyblue;
-  margin: 5px;
+  margin-bottom: 5px;
   clear: both;
 }
