--- a/practice/layout stuff/main.css
+++ b/practice/layout stuff/main.css
@@ -11,10 +11,11 @@ html, body, div {
 
 body {
   display: flex;
+  flex-flow: column nowrap;
   justify-content: space-around;
   align-items: center;
   width: 80vw;
-  height: 100vh;
+  height: 200vh;
   background-color: hotpink;
   border: 3px solid #C71585;
   margin: 0 auto;
@@ -22,7 +23,7 @@ body {
 }
 
 div {
-  /* display: inline-block; */
+  display: inline-block;
   border: 1px dotted DEEPPINK;
   height: 10rem;
   width: 8rem;
@@ -74,14 +75,23 @@ div {
   border-radius: 100%;
 }
 
-
 div {
   /* float: left; */
 }
 
 .p01 {
-  border: 3px solid DEEPPINK;
+  border: 5px solid;
+  border-color: RGB(199, 21, 133) RGB(199, 21, 133, 0.5);
   /* position: absolute; */
-  bottom: 0;
-  left: 0;
+  /* bottom: 0;
+  left: 0; */
+}
+
+.p01:hover {
+  border: 5px solid;
+  border-color: RGB(199, 21, 133) RGB(199, 21, 133, 0.5);
+  border-style: inset;
+  /* position: absolute; */
+  /* bottom: 0;
+  left: 0; */
 }
