updates previous commit files

--- a/practice/layouts-2/3/mq-640-plus.css
+++ b/practice/layouts-2/3/mq-640-plus.css
@@ -6,7 +6,7 @@ body {
 
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 nav {
@@ -21,14 +21,30 @@ ul {
 li {
   display: inline-block;
   width: 100px;
-  margin-right: 10px;
+  margin-left: 50px;
+}
+
+div {
+  display: flex;
+  justify-content: center;
+  background-color: lightgray;
+  border: 0;
+}
+
+div > div {
+  width: 80%;
+  background-color: gold;
+  border: 2px solid black;
+  margin-top: 10px;
 }
 
 main {
   display: flex;
   justify-content: space-around;
+  margin-top: 10px;
 }
 
 article {
   width: 100%;
+  margin: 10px -3px 10px;
 }
