--- a/practice/layouts-2/9 - recreate bbm/main.css
+++ b/practice/layouts-2/9 - recreate bbm/main.css
@@ -107,7 +107,7 @@ p {
     justify-content: space-around;
     margin: 5px 0px;
     list-style:none;
-    width:100%;
+    width:100vw;
     height:43px;
     padding:0px 20px;
 }
@@ -222,4 +222,8 @@ a:visited {
     margin:7px 0 14px 0;
     padding-bottom:14px;
     border-bottom:1px solid #666666;
+}
+
+img {
+  width: 100vw;
 }
