--- a/new-site/mq-840-plus.css
+++ b/new-site/mq-840-plus.css
@@ -1,12 +1,21 @@
-html, body, ul {
+html, body, #idx-atf-wrapper, header, nav, ul, main, div, #idx-headshots-box, #idx-workshops-box, h1 {
   padding: 0;
   margin: 0;
   border: 0;
   box-sizing: border-box;
 }
 
+#idx-atf-wrapper {
+  height: 100vh;
+  margin:10px 0px;
+}
+
 ul {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 .admin-nav {
@@ -31,15 +40,15 @@ ul {
 header {
   display: flex;
   height: 100px;
-  border: 3px solid black;
 }
 
 .header-logo {
   /* display: inline-block; */
-
+  border: 9px dotted pink;
+  border-radius: 50%;
+  margin-left: 30px;
   padding: 20px;
   width: 30%;
-  font-size: 30px;
 }
 
 nav {
@@ -55,10 +64,97 @@ nav > ul {
 
 nav > ul > li {
   display: inline-block;
-  margin-left: 10px;
-  font-size: 20px;
+  margin-left: 30px;
 }
 
 nav > ul > li > a {
+  font-size: 38px;
   text-decoration: none;
+}
+
+/****************************************/
+/**  end of header **/
+/****************************************/
+
+/****************************************/
+/** start of main **/
+/****************************************/
+
+main {
+  display: flex;
+  margin: 50px 30px;
+  position: relative;
+}
+
+
+#idx-headshots-wrapper, #idx-workshops-wrapper {
+  width: 50%;
+  border: 14px solid blue;
+  height: 600px;
+  position: relative;
+
+}
+
+#idx-headshots-wrapper {
+  background-image: url("img/homepage-headshot-example.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#idx-workshops-wrapper {
+  position: relative;
+  background-image: url("img/homepage-workshop-photo.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#idx-headshots-hdr {
+  position: absolute;
+  top: -30px;
+  padding: 20px;
+  border: 4px solid pink;
+  border-radius: 10%;
+  background-color: hotpink;
+}
+
+
+#idx-workshops-hdr {
+  position: absolute;
+  top: -30px;
+  padding: 20px;
+  border: 4px solid pink;
+  border-radius: 10%;
+  background-color: hotpink;
+}
+
+#idx-headshots-copy {
+  position: absolute;
+  bottom: -50px;
+  right: 50px;
+  width: 50%;
+  background-color: rgba(200, 250, 45, 0.6);
+  padding: 30px;
+}
+
+#idx-workshops-copy {
+  position: absolute;
+  bottom: -50px;
+  right: 20px;
+  width: 50%;
+  background-color: rgba(200, 250, 45, 0.4);
+  padding: 30px;
+  color: white;
+  font-size: 18px;
+}
+
+#idx-learn-link {
+  position: absolute;
+  right: 10px;
+  bottom: -40px;
+  background-color: orange;
+  border: 8px dotted red;
+  padding: 20px;
+  border-radius: 25px;
 }
