adds html, css files, backgrounds practice

--- a/gradient/main.css
+++ b/gradient/main.css
@@ -5,16 +5,18 @@ html, body, div, section, ul, li, h2, p, span {
   box-sizing: border-box;
 }
 
-body {
+/* body {
   display: flex;
   justify-content: center;
-}
+} */
 
 #wrapper {
   display: flex;
   justify-content: center;
   width: 80vw;
 }
+
+/* set dimension of all columns */
 
 #sec-cta-standard, #sec-cta-business, #sec-cta-advanced {
   width: 33%;
