--- a/new-site/mq-840-plus.css
+++ b/new-site/mq-840-plus.css
@@ -5,6 +5,14 @@ html, body, #idx-atf-wrapper, header, nav, ul, main, div, #idx-headshots-box, #i
   box-sizing: border-box;
 }
 
+body {
+  background:
+    linear-gradient(215deg, rgba(255, 138, 101), rgba(255, 225, 0, 100) 65%),
+    linear-gradient(120deg, rgba(255, 153, 0, 0.5), rgba(255, 255, 0, 0.5) 70.75%),
+    linear-gradient(155deg, rgba(0, 255, 0, 0.5), rgba(0, 0, 255, 0.5) 71.75%),
+    linear-gradient(180deg, rgba(75, 0, 130, 0.5), rgba(238, 130, 238, 0.5) 75.01%);
+}
+
 #idx-atf-wrapper {
   height: 100vh;
   width: 90%;
