--- a/price tables/main.css
+++ b/price tables/main.css
@@ -52,17 +52,16 @@ li:nth-child(even) {
   background-color: rgba(236, 239, 241);
 }
 
-#cta-button {
-  margin-top: 20px;
-  border-top: 1px solid silver;
+li:last-child {
 }
 
 a {
-  border: 1px solid rgba(149, 117, 205);
+  border: 2px solid rgba(149, 117, 205);
+  border-radius: 5%;
   font-variant: small-caps;
   color: rgba(149, 117, 205);
   font-size: 1.5rem;
-  padding: 10px 20px;
+  padding: 5px 20px;
   text-decoration: none;
   font-weight: 500;
 }
@@ -70,7 +69,7 @@ a {
 #column-02 {
   position: relative;
   top: -10px;
-  box-shadow: 2px 2px 50px 5px gray, -2px -2px 50px 5px gray;
+  box-shadow: 2px 2px 20px 3px lightgray, -2px -2px 50px 5px gray;
 }
 
 #column-02 #title {
