--- a/new-site/live-local.css
+++ b/new-site/live-local.css
@@ -6,10 +6,13 @@ html, body, ul, li, header, nav, div, main, h1, h2, p, figure {
 }
 
 body {
-  width: 80%;
-  margin: 0 auto;
-  border: 4px solid hotpink;
+  height: 100vh;
+  width: 95%;
+  /* border: 4px solid black; */
+  margin:10px auto;
+  padding: 10px 25px;
 }
+
 
 ul {
   list-style: none;
@@ -19,59 +22,58 @@ a {
   text-decoration: none;
 }
 
-/* #atf-wrapper {
-  height: 100vh;
-} */
+/******************************************/
+          /*  start of header  */
+/******************************************/
 
 #top-header {
   display: flex;
-  justify-content: space-around;
-  /* width: 98%; */
-  /* border: 3px solid hotpink; */
-  margin: 5px auto;
 }
 
 #logo {
-  width: 20%;
-  background-color: gold;
-  border: 3px solid hotpink;
-  margin: 10px 20px;;
+  background-image: url("img/Beauty-by-Masayo-website-1024x343.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 25%;
+  height: 100px;
 }
-/* #top-logo {
-  width: 10%;
-} */
 
-#top-nav {
+#logo a {
+  padding: 75px 150px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
   width: 70%;
-  border: 3px solid hotpink;
-  margin: 10px 10px 0px 10px;
-  text-align: center;
-  /* border-bottom: 2px solid black; */
 }
 
-#top-nav > ul:first-child {
-    padding-left: 20px;
+nav > ul {
+  margin-top: 30px;
 }
 
-#top-nav > ul > li {
+nav > ul > li {
   display: inline-block;
-  padding: 10px;
-  margin-right: 10px;
+  margin-left: 30px;
 }
 
-#top-nav > ul > li > a {
-  border: 3px solid hotpink;
-  font-size: 1.10rem;
+nav > ul > li > a {
+  font-size: 1.75rem;
+  text-decoration: none;
 }
 
 #top-admin-links {
-  /* border: 3px solid hotpink; */
-  width: 20%;
-  padding: 10px 0px 0px 10px;
+  padding: 15px 0;
+  margin-left: 2%;
 }
 
 #top-admin-links > ul > li {
-  margin: 3px 0px;
+  margin: 3px 40px;
+}
+
+#top-admin-links > ul > li > a {
+  font-size: 1.1rem;
 }
 
 /*************************************************/
@@ -80,8 +82,9 @@ a {
 
 main {
   position: relative;
-  margin: 80px 10px 10px 110px;
-  padding: 10px 30px;
+  width: 95%;
+  margin: 50px auto;
+  border: 3px dashed pink;
 }
 
 #page-title {
@@ -91,14 +94,10 @@ main {
   font-size: 2.5rem;
 }
 
-.main-sec {
-
-}
-
 .article {
-  width: 75%;
-  margin-left: 80px;
-  /* border: 3px solid hotpink; */
+  width: 65%;
+  margin-left: 25%;
+  border: 3px solid hotpink;
 }
 
 .article > p {
@@ -132,8 +131,8 @@ figcaption {
 #left-sidebar {
   position: absolute;
   top: 280px;
-  left: 160px;
-  width: 200px;
+  left: 80px;
+  width: 300px;
   margin-left: 15px;
   padding: 10px;
   height: 600px;
@@ -148,12 +147,14 @@ figcaption {
 }
 
 #aside-wrapper {
+  position: absolute;
+  bottom: -150px;
   display: flex;
   justify-content: center;
 }
 
 .aside-sec {
-  width: 25%;
+  width: 33%;
   margin: 5px;
 }
 
