--- a/new-site/workshops.css
+++ b/new-site/workshops.css
@@ -6,9 +6,19 @@ html, body, ul, li, header, nav, div, main, h1, h2, p, figure {
 }
 
 body {
-  width: 80%;
-  margin: 0 auto;
-  border: 4px solid hotpink;
+  height: 100vh;
+  width: 95%;
+  /* border: 4px solid black; */
+  margin:10px auto;
+  padding: 10px 25px;
+}
+
+#idx-atf-wrapper {
+  height: 100vh;
+  width: 95%;
+  /* border: 4px solid black; */
+  margin:10px auto;
+  padding: 10px 25px;
 }
 
 ul {
@@ -19,53 +29,57 @@ a {
   text-decoration: none;
 }
 
-/* #atf-wrapper {
-  height: 100vh;
-} */
+/******************************************/
+          /*  start of header  */
+/******************************************/
 
 #top-header {
   display: flex;
-  /* border: 3px solid hotpink; */
 }
 
 #logo {
-  width: 15%;
-  background-color: gold;
-  border: 3px solid hotpink;
-  margin: 0.5%;
+  background-image: url("img/Beauty-by-Masayo-website-1024x343.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 25%;
+  height: 100px;
 }
 
-#top-nav {
+#logo a {
+  padding: 75px 150px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
   width: 70%;
-  border: 3px solid hotpink;
-  margin: 10px 10% 0px 10%;
-  text-align: center;
-  /* border-bottom: 2px solid black; */
 }
 
-#top-nav > ul:first-child {
-    padding-left: 20px;
+nav > ul {
+  margin-top: 30px;
 }
 
-#top-nav > ul > li {
+nav > ul > li {
   display: inline-block;
-  padding: 10px;
-  margin-right: 10px;
 }
 
-#top-nav > ul > li > a {
-  border: 3px solid hotpink;
-  font-size: 1.10rem;
+nav > ul > li > a {
+  font-size: 1.75rem;
+  text-decoration: none;
 }
 
 #top-admin-links {
-  /* border: 3px solid hotpink; */
-  width: 15%;
-  padding: 10px 0px 0px 10px;
+  padding: 15px 0;
+  margin-left: 2%;
 }
 
 #top-admin-links > ul > li {
-  margin: 3px 0px;
+  margin: 3px 40px;
+}
+
+#top-admin-links > ul > li > a {
+  font-size: 1.1rem;
 }
 
 /***********************************/
