--- a/new-site/headshots.css
+++ b/new-site/headshots.css
@@ -85,7 +85,7 @@ main {
   display: flex;
   height: 90vh;
   position: relative;
-  margin: 0 auto;
+  margin: 100px auto;
 }
 
 
@@ -94,13 +94,26 @@ main {
   position: relative;
   height: 100%;
   margin: 0 auto;
+  width: 75%;
+  border: 3px double orangered;
+  border-right: none;
 }
 
+.workshop-wrapper h1 {
+  position: absolute;
+  top: -50px;
+}
 
+.workshop-wrapper figure img {
+  width: 800px;
+  height: auto;
+}
+
+figcaption {
+  text-align: center;
+}
 
 .left-sidebar {
-  /* position: absolute;
-  top: 100px; */
   width: 300px;
   height: 600px;
   border: 4px solid hotpink;
@@ -122,25 +135,6 @@ main {
   width: 95%;
   margin: 10px auto;
 }
-
-#img-wrk-ex-01 {
-  background-image: url("img/homepage-headshot-example.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  width: 458px;
-  height: 541px;
-}
-
-#pkg-container > figcaption {
-  font-size: 0.75rem;
-  text-align: center;
-}
-
-#img-examples {
-  border: 4px solid hotpink;
-}
-
 
 .left-sidebar, .right-sidebar {
   /* position: absolute;
@@ -177,6 +171,11 @@ main {
     padding: 20px 45px;
     color: gray;
     text-transform: uppercase;
+}
+
+.right-sidebar {
+  border: 3px double orangered;
+  border-left: none;
 }
 
 .aside-wrapper {
