--- a/new-site/live-events.css
+++ b/new-site/live-events.css
@@ -1,18 +1,16 @@
-html, body, ul, li, header, nav, div, main, h1, h2, p, figure {
+html, body, ul, li, header, nav, div, main, aside, section, h1, h2, p, a, figure, figcaption {
   padding: 0;
   margin: 0;
   border: 0;
   box-sizing: border-box;
 }
 
-body {
+.atf-wrapper {
   height: 100vh;
-  width: 95%;
-  /* border: 4px solid black; */
-  margin:10px auto;
-  padding: 10px 25px;
+  width: 90%;
+  border: 1px dotted black;
+  margin: 0 auto;
 }
-
 
 ul {
   list-style: none;
@@ -28,6 +26,8 @@ a {
 
 #top-header {
   display: flex;
+  margin: 0 auto;
+  width: 100%;
 }
 
 #logo {
@@ -35,7 +35,7 @@ a {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  width: 25%;
+  width: 15%;
   height: 100px;
 }
 
@@ -44,28 +44,29 @@ a {
 }
 
 nav {
-  display: flex;
-  justify-content: space-around;
   width: 70%;
 }
 
 nav > ul {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   margin-top: 30px;
 }
 
 nav > ul > li {
-  display: inline-block;
-  margin-left: 30px;
+  text-align: center;
+  width: 20%;
 }
 
 nav > ul > li > a {
-  font-size: 1.75rem;
+  font-size: 1.55rem;
   text-decoration: none;
 }
 
 #top-admin-links {
+  width: 15%;
   padding: 15px 0;
-  margin-left: 2%;
 }
 
 #top-admin-links > ul > li {
@@ -84,23 +85,23 @@ main {
   position: relative;
   width: 95%;
   margin: 50px auto;
-  border: 3px dashed pink;
 }
 
-#page-title {
+.main-title {
   position: absolute;
   top: -50px;
-  left: 50px;
+  left: 150px;
   font-size: 2.5rem;
 }
 
-.article {
+.main-article {
   width: 65%;
-  margin-left: 25%;
+  margin-left: 18%;
+  height: 100vh;
   border: 3px solid hotpink;
 }
 
-.article > p {
+.main-article > p {
   padding: 5px;
 }
 
@@ -109,7 +110,7 @@ main {
   font-size: 1.0rem;
 }
 
-.img-to-wrap {
+.main-img {
   float: right;
   position: relative;
   top: -20px;
@@ -117,7 +118,7 @@ main {
   margin: 20px 0px 0px -50px;
 }
 
-.img-to-wrap > img {
+.main-img > img {
   height: 341px;
   width: 258px;
 }
@@ -128,11 +129,11 @@ figcaption {
   font-size: 0.75rem;
 }
 
-#left-sidebar {
+.left-sidebar {
   position: absolute;
   top: 280px;
   left: 80px;
-  width: 300px;
+  width: 250px;
   margin-left: 15px;
   padding: 10px;
   height: 600px;
@@ -141,23 +142,24 @@ figcaption {
   font-size: 0.75rem;
 }
 
-#sidebar-hdr-title {
-  margin-bottom: 10px;
-  font-size: 1.05rem;
-}
-
-#aside-wrapper {
-  position: absolute;
-  bottom: -150px;
+.aside-wrapper {
   display: flex;
+  width: 100%;
   justify-content: center;
+  position: absolute;
+  bottom: -450px;
 }
 
 .aside-sec {
-  width: 33%;
-  margin: 5px;
+  list-style-type: disc;
+  padding: 10px 0 10px 10px;
+  list-style-position: inside;
+  font-weight: 600;
 }
 
-.aside-sec > ul {
-  list-style: inside;
+.aside-sec figure {
+  width: 200px;
+  height: 200px;
+  border: 2px solid black;
+  background-color: gold;
 }
