--- a/new-site/mq-840-plus.css
+++ b/new-site/mq-840-plus.css
@@ -1,24 +1,14 @@
-html, body, header, figure, nav, ul, main, div, h1, span {
+html, body, header, figure, nav, ul, main, div, h1, span, svg {
   padding: 0;
   margin: 0;
   border: 0;
   box-sizing: border-box;
 }
-/*
-body {
-  background:
-    linear-gradient(215deg, rgba(255, 138, 101), rgba(255, 225, 0, 100) 65%),
-    linear-gradient(120deg, rgba(255, 153, 0, 0.5), rgba(255, 255, 0, 0.5) 70.75%),
-    linear-gradient(155deg, rgba(0, 255, 0, 0.5), rgba(0, 0, 255, 0.5) 71.75%),
-    linear-gradient(180deg, rgba(75, 0, 130, 0.5), rgba(238, 130, 238, 0.5) 75.01%);
-} */
-
-#idx-atf-wrapper {
+.atf-wrapper {
   height: 100vh;
-  width: 95%;
-  /* border: 4px solid black; */
-  margin:10px auto;
-  padding: 10px 25px;
+  width: 90%;
+  border: 1px dotted black;
+  margin: 0 auto;
 }
 
 ul {
@@ -35,6 +25,8 @@ a {
 
 #top-header {
   display: flex;
+  margin: 0 auto;
+  width: 100%;
 }
 
 #logo {
@@ -42,7 +34,7 @@ a {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  width: 25%;
+  width: 15%;
   height: 100px;
 }
 
@@ -51,28 +43,29 @@ a {
 }
 
 nav {
-  display: flex;
-  justify-content: space-around;
   width: 70%;
 }
 
 nav > ul {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   margin-top: 30px;
 }
 
 nav > ul > li {
-  display: inline-block;
-  margin-left: 30px;
+  text-align: center;
+  width: 20%;
 }
 
 nav > ul > li > a {
-  font-size: 1.75rem;
+  font-size: 1.55rem;
   text-decoration: none;
 }
 
 #top-admin-links {
+  width: 15%;
   padding: 15px 0;
-  margin-left: 2%;
 }
 
 #top-admin-links > ul > li {
@@ -91,7 +84,7 @@ nav > ul > li > a {
 main {
   display: flex;
   width: 95%;
-  margin: 50px auto;
+  margin: 0 auto;
   position: relative;
 }
 
@@ -100,17 +93,18 @@ main {
   width: 50%;
   /* border: 5px double navy; */
   /* border-radius: 2%; */
-  margin: 20px;
-  height: 500px;
+  margin: 0 20px;
+  height: 600px;
   position: relative;
-
+  top: 00px;
+  z-index: -2;
 }
 
 #idx-headshots-wrapper {
   background-image: url("img/headshot-front-page.jpg");
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 
 }
 
@@ -136,8 +130,8 @@ main {
 #idx-headshots-copy {
   position: absolute;
   bottom: -50px;
-  right: 50px;
-  width: 50%;
+  left: 10px;
+  width: 10%;
   background-color: rgba(200, 250, 45, 0.6);
   padding: 30px;
 }
