--- a/new-site/commercial.css
+++ b/new-site/commercial.css
@@ -90,15 +90,23 @@ main {
 
 .main-title {
   position: absolute;
-  top: -50px;
-  left: 150px;
-  font-size: 1.5rem;
+  top: -100px;
+  left: 250px;
+  font-size: 3.5rem;
+}
+
+main h2 {
+  font-size: 0.75rem;
+  position: absolute;
+  top: -25px;
+  left: 250px;
 }
 
 .main-article {
   width: 65%;
   margin-left: 18%;
   padding: 25px;
+  border: 2px solid black;
   height: 100vh;
 }
 
@@ -107,7 +115,7 @@ main {
 }
 
 .main-article section {
-  margin-bottom: 200px;
+  /* margin-bottom: 50px; */
 }
 
 .subheader-h3 {
@@ -137,18 +145,20 @@ figcaption {
 #aside-wrapper-01 {
   display: flex;
   justify-content: center;
-  position: absolute;
+  /* position: absolute;
   bottom: -70px;
-  left: -50px;
+  left: -50px; */
 }
 
 #aside-wrapper-01 section {
+  margin-right: 30px;
   width: 20%;
 }
 
 #aside-wrapper-01 figure {
-  width: 150px;
+  width: 250px;
   height: 150px;
+  border: 3px solid pink;
 }
 /*
 #aside-wrapper-01 h3 {
@@ -162,10 +172,19 @@ figcaption {
   width: 250px;
   margin-left: 15px;
   padding: 10px;
-  height: 600px;
   border: 4px solid hotpink;
   border-radius: 10px;
   font-size: 0.75rem;
+}
+
+
+.left-sidebar-cta {
+    border: 2px solid gray;
+    border-radius: 5px;
+    background: linear-gradient(rgba(255, 70, 0, 0.5)30%, rgba(255, 0, 0, 1));
+    padding: 20px 45px;
+    color: gray;
+    text-transform: uppercase;
 }
 
 .aside-wrapper {
@@ -173,7 +192,7 @@ figcaption {
   width: 100%;
   justify-content: center;
   position: absolute;
-  bottom: -550px;
+  bottom: -650px;
 }
 
 .aside-sec {
