--- a/new-site/main.css
+++ b/new-site/main.css
@@ -1,4 +1,9 @@
-html, body, section, article, header, figure, nav, main, div, h1, h2, p, span, svg, aside, form, input, label, button, ul, li, a {
+/* border for troubleshooting
+border: 1px solid deeppink; */
+
+
+
+html, body, section, article, header, figure, figcaption, nav, main, div, h1, h2, p, span, svg, form, input, label, button, ul, li, a {
   padding: 0;
   margin: 0;
   border: 0;
@@ -30,6 +35,13 @@ a {
   text-decoration: none;
 }
 
+.workshops-header-list li {
+  display: none;
+  line-height: 5px;
+  letter-spacing: -1px;
+}
+
+
 /******************************************/
           /*  start of header  */
 /******************************************/
@@ -50,11 +62,12 @@ a {
   background-repeat: no-repeat;
   background-size: contain;
   width: 20%;
-  height: 50px;
+  height: 55px;
+  /* margin-left: 1rem; */
 }
 
 #logo a {
-  padding: 80%;
+  padding: 40%;
 }
 
 
@@ -72,6 +85,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: rgb(190, 30, 45);
 }
 
 input[type="checkbox"] {
@@ -84,22 +98,24 @@ input[type="checkbox"] {
     position: fixed;
     right: -850rem;
     /* formatting */
-    height: 50vh;
+    height: 100vh;
     width: 75vw;
-    max-width: 200px;
-    background-color: silver;
+    max-width: 300px;
+    background-color: black;
     border-right: 2px solid white;
-    font-size: 1.5rem;
+    font-family: arial;
     /* transition */
     transition-property: all;
-    transition-timing-function: ease;
-    transition-duration: 0.5s;
+    transition-timing-function: ease-in;
+    transition-duration: 0.25s;
     overflow: scroll;
 }
 
 #sidebar a {
-  color: black;
-  padding: 10px;
+  color: white;
+  font-family: sans-serif;
+  margin-left: 25px;
+  font-size: 1.5rem;
 }
 
 input[type="checkbox"]:checked + #sidebar {
@@ -107,12 +123,12 @@ input[type="checkbox"]:checked + #sidebar {
     right: 0;
 }
 
-.sidebar ul {
-    margin-top: 4rem;
+#sidebar li:first-of-type {
+  margin-top: 35px;
 }
 
 #sidebar li {
-  padding: 5px;
+  padding: 5px 5px 25px;
 }
 
 
@@ -130,40 +146,50 @@ main {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  width: 98%;
-  /* max-width: 680px; */
+  width: 95%;
+  max-width: 600px;
   margin: 75px auto;
 }
 
-main > header {
-  width: 100%;
-  /* max-width: 350px; */
-}
-
-h1 {
-  font-size: 4.5rem;
-  line-height: 60%;
+.main-header h1 {
+  font-size: 4rem;
+  line-height: 45px;
   letter-spacing: -4px;
   text-align: center;
+  -webkit-text-stroke: 0.5px black;
 }
 
-main > header > h2 {
-  /* text-indent: 18%; */
-  line-height: 100%;
+.main-header {
+  width: 100%;
+}
+
+.main-header h2 {
+  line-height: 30px;
   color: rgb(190, 30, 45);
   width: 100%;
-  /* max-width: 500px; */
   font-size: 2rem;
   text-align: center;
+  -webkit-text-stroke: 0.5px black;
 }
 
 h3 {
   color: rgb(190, 30, 45);
-  font-size: 1.3rem;
-  width: 75%;
-  margin: 25px auto;
-  margin-bottom: 5px;
+  font-size: 1.9rem;
+  /* width: 75%; */
+  margin: 5px 0 -30px;
 }
+
+.workshops-header-list {
+  display: flex;
+  flex-flow: row wrap;
+  /* text-align: center;  */
+}
+/*
+.workshops-header-list li {
+  display: inline-block;
+  font-size: 1.1rem;
+  line-height: 1px;
+} */
 
 main header figure {
   background-image: url("img/headshots/headshots-white-male.jpg");
@@ -191,13 +217,6 @@ article {
   height: 400px;
 }
 
-/* article header h2 {
-  font-size: 1.75rem;
-  color: rgb(190, 30, 45);
-  text-align: left;
-  font-variant: small-caps;
-} */
-
 main ul {
   margin: 15px 20px;
 }
@@ -218,27 +237,36 @@ main ul li {
 }
 
 .fees li:first-of-type {
-  line-height: 100px;
+  line-height: 90px;
 }
 
 .fees li:nth-child(2) {
-  line-height: 15px;
-  font-size: 2em;
-  margin-top: -40px;
+  line-height: 35px;
+  font-size: 3em;
+  margin-top: -50px;
+  margin-bottom: -10px;
+  letter-spacing: -3px;
 }
 
 .fee li:nth-child(3) {
   font-size: 1.5rem;
+  letter-spacing: -2px;
+  line-height: 12px;
+}
+
+.fees li:nth-child(5) {
 }
 
 .fees li:nth-child(n+5):nth-child(-n+8) {
-  margin: 10px;
+  text-align: left;
+  width: 50%;
+  margin: -5px auto;
 }
 
 .dollar-sign {
   font-size: 3rem;
-  vertical-align:text-bottom;
-  margin-right: -5px;
+  vertical-align:50px;
+  margin-right: -10px;
 }
 
 .dollars {
@@ -248,7 +276,21 @@ main ul li {
 }
 
 .three {
-  font-size: 3.5rem;
+  font-size: 4rem;
+}
+
+.asterisk-300 {
+  font-size: 4rem;
+  width: 40px;
+  margin-left: 10px;
+  vertical-align:20px;
+  color: red;
+}
+
+.asterisk-fees {
+  font-size: 28px;
+  color: red;
+  padding: 5px;
 }
 
 article figure {
@@ -288,6 +330,7 @@ article figure {
 
 article h2 {
   font-size: 2.5rem;
+  line-height: 30px;
 }
 
 main p {
@@ -296,46 +339,32 @@ main p {
   color: gray;
 }
 
-.discounters {
-  display: flex;
-  justify-content: center;
-  margin-top: 5px;
-  padding: 10px 0;
-  /* border-top: 2px solid black;
-  border-bottom: 2px solid black; */
-  width: 100%;
-}
-
-.discounters > p {
-  color: white;
-  background: linear-gradient(rgb(86, 101, 115, 0.7)45%, rgb(86, 101, 115, 1));
-  border-radius: 10px;
-  padding: 10px;
-  width: 55%;
-  margin-right: -10px;
-  font-weight: 700;
-  font-size: 1.1rem;
-  font-family: arial;
-  line-height: 18px;
-}
-
-.discounters i {
-  width: 25%;
-}
-
 /****************************************/
         /** start of contact form **/
 /****************************************/
 
 .form-container {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row wrap;
   width: 90%;
   margin: -85px auto;
   margin-bottom: 25px;
-  border: 3px solid black;
-  border-radius: 5px;
-  max-width: 700px;
+  padding: 15px;
+  max-width: 600px;
+}
+
+.form-container li:nth-child(2) {
+  width: 100%;
+  line-height: 25px;
+  font-size: 2em;
+}
+
+.form-container li:nth-child(3) {
+  margin-top: 20px;
+}
+.form-container header {
+  text-align: center;
+  width: 100%;
 }
 
 .form-container header h3 {
@@ -344,14 +373,17 @@ main p {
 
 form {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: column wrap;
+  width: 100%;
 }
 
 input {
   margin: 10px auto;
   width: 90%;
-  height: 30px;
+  max-width: 400px;
+  height: 55px;
   font-size: 1.25rem;
+  font-family: arial;
   border: 2px solid silver;
 }
 
@@ -370,6 +402,13 @@ input {
   background-color: white;
   border-radius: 5px;
   box-shadow: 1px 1px 5px gray;
+}
+
+.cta-sec {
+  margin-top: 20px;
+  border: 4px solid red;
+  border-radius: 5px;
+  padding: 15px;
 }
 
 /****************************************/
